--- a/index.html
+++ b/index.html
@@ -469,8 +469,7 @@
       <div class="grid grid-cols-1 md:grid-cols-4 gap-4 h-auto md:h-[600px]">
         <div
           class="md:col-span-2 md:row-span-2 relative overflow-hidden rounded-2xl group cursor-pointer h-64 md:h-full">
-          <img
-            src="https://images.unsplash.com/photo-1599587440406-8c764c67347a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
+          <img src="https://images.pexels.com/photos/33592359/pexels-photo-33592359.jpeg"
             class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
           <div
             class="absolute inset-0 bg-gradient-to-t from-navy-950/90 to-transparent flex flex-col justify-end p-8 opacity-100 md:opacity-0 group-hover:opacity-100 transition-opacity">
@@ -500,8 +499,7 @@
         </div>
 
         <div class="relative overflow-hidden rounded-2xl group cursor-pointer h-48 md:h-auto">
-          <img
-            src="https://images.unsplash.com/photo-1533630654512-42173168d6d6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
+          <img src="https://images.pexels.com/photos/33592359/pexels-photo-33592359.jpeg"
             class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
           <div
             class="absolute inset-0 bg-black/50 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
