--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
       },
       colors: {
         navy: {
-          800: '#0f172a',
-          900: '#050a14', // Azul profundo "Deep Sea"
-          950: '#02040a',
+          500: '#2e5a9e', // Azul claro "Cielo"
+          800: '#1e4079', // Azul intermedio
+          900: '#003366', // Azul Institucional (Royal Navy Blue)
+          950: '#001a3d', // Azul oscuro profundo
         },
         gold: {
-          500: '#c5a059', // Dorado más mate/elegante
-          600: '#a38241',
+          500: '#d4af37', // Dorado metálico clásico
+          600: '#b8860b', // Dorado oscuro
+        },
+        red: {
+          600: '#ce1126' // Rojo dominicano
         }
       }
     }
@@ -113,7 +117,7 @@
             <h1 class="text-2xl font-serif font-bold text-navy-900 leading-none">Academia Naval</h1>
             <h2 class="text-sm font-bold text-navy-800 uppercase tracking-wide mt-0.5">César Augusto de Windt Lavandier
             </h2>
-            <p class="text-[10px] text-gray-500 font-bold uppercase tracking-[0.2em] mt-0.5">ARMADA DE REPÚBLICA
+            <p class="text-[10px] text-navy-900 font-bold uppercase tracking-[0.2em] mt-0.5">ARMADA DE REPÚBLICA
               DOMINICANA</p>
           </div>
         </div>
@@ -197,42 +201,111 @@
     </nav>
   </header>
 
-<section class="relative bg-navy-900 min-h-[80vh] flex items-center overflow-hidden">
-  <div class="absolute inset-0 opacity-10 pointer-events-none" style="background-image: url('https://www.transparenttextures.com/patterns/stardust.png');"></div>
-  <div class="absolute top-20 left-10 text-gold-500/20 font-mono text-xs hidden lg:block">
-    18° 28' 35" N <br> 69° 52' 59" W
-  </div>
+<!-- Hero Carousel Section -->
+<section x-data="{
+    activeSlide: 0,
+    slides: [
+        {
+            image: 'https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=2070&auto=format&fit=crop',
+            subtitle: 'Excelencia en el Mar',
+            title: 'Forjando el Liderazgo Naval',
+            description: 'Formación integral que combina tradición militar con innovación académica de vanguardia.',
+            cta: 'Admisiones 2025'
+        },
+        {
+            image: 'https://images.unsplash.com/photo-1559136555-9303baea8ebd?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80',
+            subtitle: 'Honor y Tradición',
+            title: 'Defensores de la Soberanía',
+            description: 'Preparando a los oficiales que custodiarán nuestras costas y garantizarán la seguridad nacional.',
+            cta: 'Nuestra Historia'
+        },
+        {
+            image: 'https://images.unsplash.com/photo-1623941008745-095cb70d55e8?q=80&w=2070&auto=format&fit=crop',
+            subtitle: 'Ciencia y Virtud',
+            title: 'Tecnología y Estrategia',
+            description: 'Capacitación al más alto nivel para enfrentar los desafíos marítimos del siglo XXI.',
+            cta: 'Carrera Naval'
+        }
+    ],
+    next() {
+        this.activeSlide = (this.activeSlide === this.slides.length - 1) ? 0 : this.activeSlide + 1;
+    },
+    prev() {
+        this.activeSlide = (this.activeSlide === 0) ? this.slides.length - 1 : this.activeSlide - 1;
+    },
+    init() {
+        setInterval(() => { this.next() }, 7000);
+    }
+}" class="relative bg-navy-900 h-[85vh] flex items-center overflow-hidden group">
 
-  <div class="container mx-auto px-4 grid lg:grid-cols-2 gap-12 items-center relative z-10">
-    <div class="text-white">
-      <span class="inline-block px-4 py-1 border border-gold-500 text-gold-500 text-xs font-bold tracking-widest uppercase mb-6">
-        Excelencia en el Mar
-      </span>
-      <h2 class="text-5xl md:text-7xl font-serif font-bold leading-tight mb-6">
-        Forjando el <span class="text-gold-500">Liderazgo</span> de nuestra Armada
-      </h2>
-      <p class="text-lg text-gray-400 max-w-lg mb-8 leading-relaxed">
-        Institución líder en la formación integral de oficiales navales, combinando la tradición militar con la innovación académica de vanguardia.
-      </p>
-      <div class="flex flex-wrap gap-4">
-        <a href="#" class="bg-gold-600 hover:bg-gold-500 text-navy-900 px-8 py-4 rounded-sm font-bold transition-all transform hover:-translate-y-1">
-          Admisiones 2025
-        </a>
-        <a href="#" class="border border-white/30 hover:bg-white/10 text-white px-8 py-4 rounded-sm font-bold transition-all">
-          Nuestra Historia
-        </a>
-      </div>
+    <!-- Slides -->
+    <template x-for="(slide, index) in slides" :key="index">
+        <div x-show="activeSlide === index"
+             x-transition:enter="transition ease-out duration-1000"
+             x-transition:enter-start="opacity-0 transform scale-105"
+             x-transition:enter-end="opacity-100 transform scale-100"
+             x-transition:leave="transition ease-in duration-1000"
+             x-transition:leave-start="opacity-100 transform scale-100"
+             x-transition:leave-end="opacity-0 transform scale-95"
+             class="absolute inset-0 z-0">
+            <!-- Background Image -->
+            <div class="absolute inset-0 bg-cover bg-center" :style="`background-image: url('${slide.image}')`"></div>
+            <!-- Overlay -->
+            <div class="absolute inset-0 bg-gradient-to-r from-navy-900 via-navy-900/80 to-navy-900/30"></div>
+        </div>
+    </template>
+
+    <!-- Grid Texture Overlay -->
+    <div class="absolute inset-0 opacity-10 pointer-events-none z-10" style="background-image: url('https://www.transparenttextures.com/patterns/stardust.png');"></div>
+
+    <!-- Content -->
+    <div class="container mx-auto px-4 relative z-20 h-full flex items-center">
+        <div class="max-w-3xl pt-20">
+             <template x-for="(slide, index) in slides" :key="index">
+                <div x-show="activeSlide === index"
+                     x-transition:enter="transition ease-out duration-700 delay-300"
+                     x-transition:enter-start="opacity-0 translate-y-8"
+                     x-transition:enter-end="opacity-100 translate-y-0"
+                     class="text-left">
+                    <span class="inline-block px-4 py-1 border border-gold-500 text-gold-500 text-xs font-bold tracking-widest uppercase mb-6" x-text="slide.subtitle"></span>
+                    <h2 class="text-5xl md:text-7xl font-serif font-bold leading-none mb-6 text-white">
+                        <span x-text="slide.title.split(' ')[0]"></span>
+                        <span class="text-gold-500" x-text="slide.title.split(' ').slice(1).join(' ')"></span>
+                    </h2>
+                    <p class="text-lg text-gray-300 max-w-xl mb-10 leading-relaxed" x-text="slide.description"></p>
+                    <div class="flex flex-wrap gap-4">
+                        <a href="#" class="bg-gold-600 hover:bg-gold-500 text-navy-900 px-8 py-4 rounded-sm font-bold transition-all transform hover:-translate-y-1 shadow-lg shadow-gold-500/20" x-text="slide.cta"></a>
+                        <a href="#" class="group border border-white/30 hover:bg-white/10 text-white px-8 py-4 rounded-sm font-bold transition-all flex items-center gap-2">
+                           <span>Conocer más</span> <ion-icon name="arrow-forward" class="group-hover:translate-x-1 transition-transform"></ion-icon>
+                        </a>
+                    </div>
+                </div>
+             </template>
+        </div>
     </div>
-    
-    <div class="relative hidden lg:block">
-      <div class="absolute -inset-4 border border-gold-500/30 translate-x-4 translate-y-4"></div>
-      <div class="relative h-[550px] overflow-hidden shadow-2xl">
-        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=2070&auto=format&fit=crop" 
-             class="w-full h-full object-cover" alt="Academia Naval">
-        <div class="absolute inset-0 bg-gradient-to-t from-navy-900 via-transparent to-transparent"></div>
-      </div>
+
+    <!-- Navigation Arrows -->
+    <button @click="prev()" class="absolute left-4 top-1/2 -translate-y-1/2 z-30 w-12 h-12 flex items-center justify-center border border-white/20 text-white/50 hover:bg-white/10 hover:text-white hover:border-white transition-all rounded-full group">
+        <ion-icon name="chevron-back-outline" class="text-2xl group-hover:-translate-x-1 transition-transform"></ion-icon>
+    </button>
+    <button @click="next()" class="absolute right-4 top-1/2 -translate-y-1/2 z-30 w-12 h-12 flex items-center justify-center border border-white/20 text-white/50 hover:bg-white/10 hover:text-white hover:border-white transition-all rounded-full group">
+        <ion-icon name="chevron-forward-outline" class="text-2xl group-hover:translate-x-1 transition-transform"></ion-icon>
+    </button>
+
+    <!-- Indicators -->
+    <div class="absolute bottom-8 left-1/2 -translate-x-1/2 z-30 flex gap-3">
+        <template x-for="(slide, index) in slides" :key="index">
+            <button @click="activeSlide = index" 
+                    class="h-1 transition-all duration-300 rounded-full"
+                    :class="activeSlide === index ? 'w-12 bg-gold-500' : 'w-6 bg-white/20 hover:bg-white/40'"></button>
+        </template>
     </div>
-  </div>
+
+    <!-- Coordinates Decor (Optional) -->
+    <div class="absolute bottom-8 right-8 text-gold-500/30 font-mono text-xs hidden lg:block z-20">
+        18° 28' 35" N • 69° 52' 59" W
+    </div>
+
 </section>
 
 <section class="relative -mt-16 z-30 px-4 mb-20">
