feat: Update placeholder links to point to the 404 error page across all HTML files.

--- a/articulos.html
+++ b/articulos.html
@@ -71,14 +71,14 @@
               Institución <ion-icon name="chevron-down-outline" class="text-gold-500"></ion-icon>
             </button>
             <div class="absolute top-full right-0 mt-4 w-48 bg-navy-900 border border-navy-800 shadow-2xl rounded-sm py-2 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all transform origin-top-right">
-              <a href="#" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Historia</a>
-              <a href="#" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Misión & Visión</a>
-              <a href="#" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Directores</a>
+              <a href="404.html" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Historia</a>
+              <a href="404.html" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Misión & Visión</a>
+              <a href="404.html" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Directores</a>
             </div>
           </div>
           <a href="articulos.html" class="text-white text-sm font-medium hover:text-gold-500 transition-colors uppercase tracking-widest">Noticias</a>
           <a href="contacto.html" class="text-white text-sm font-medium hover:text-gold-500 transition-colors uppercase tracking-widest">Contacto</a>
-          <a href="#" class="px-6 py-2 bg-gradient-to-r from-gold-600 to-gold-400 text-navy-950 text-xs font-bold uppercase tracking-wider rounded-sm hover:shadow-[0_0_20px_rgba(212,175,55,0.5)] transition-all transform hover:-translate-y-0.5">
+          <a href="404.html" class="px-6 py-2 bg-gradient-to-r from-gold-600 to-gold-400 text-navy-950 text-xs font-bold uppercase tracking-wider rounded-sm hover:shadow-[0_0_20px_rgba(212,175,55,0.5)] transition-all transform hover:-translate-y-0.5">
             Admisiones
           </a>
         </nav>
@@ -96,7 +96,7 @@
         <ion-icon name="close-outline"></ion-icon>
       </button>
       <a href="index.html" class="text-2xl text-white font-serif hover:text-gold-500">Inicio</a>
-      <a href="#" class="text-2xl text-white font-serif hover:text-gold-500">Institución</a>
+      <a href="404.html" class="text-2xl text-white font-serif hover:text-gold-500">Institución</a>
       <a href="articulos.html" class="text-2xl text-white font-serif hover:text-gold-500">Noticias</a>
       <a href="contacto.html" class="text-2xl text-white font-serif hover:text-gold-500">Contacto</a>
     </div>
@@ -201,11 +201,11 @@
        <!-- Pagination -->
         <div class="flex justify-center mt-16">
             <nav class="flex gap-2">
-                <a href="#" class="w-10 h-10 flex items-center justify-center border border-gray-200 text-gray-500 hover:text-navy-900 hover:border-navy-900 transition-colors"><ion-icon name="chevron-back"></ion-icon></a>
-                <a href="#" class="w-10 h-10 flex items-center justify-center bg-navy-900 text-white font-bold text-sm">1</a>
-                <a href="#" class="w-10 h-10 flex items-center justify-center border border-gray-200 text-gray-700 hover:text-navy-900 hover:border-navy-900 transition-colors text-sm font-medium">2</a>
-                <a href="#" class="w-10 h-10 flex items-center justify-center border border-gray-200 text-gray-700 hover:text-navy-900 hover:border-navy-900 transition-colors text-sm font-medium">3</a>
-                <a href="#" class="w-10 h-10 flex items-center justify-center border border-gray-200 text-gray-500 hover:text-navy-900 hover:border-navy-900 transition-colors"><ion-icon name="chevron-forward"></ion-icon></a>
+                <a href="404.html" class="w-10 h-10 flex items-center justify-center border border-gray-200 text-gray-500 hover:text-navy-900 hover:border-navy-900 transition-colors"><ion-icon name="chevron-back"></ion-icon></a>
+                <a href="404.html" class="w-10 h-10 flex items-center justify-center bg-navy-900 text-white font-bold text-sm">1</a>
+                <a href="404.html" class="w-10 h-10 flex items-center justify-center border border-gray-200 text-gray-700 hover:text-navy-900 hover:border-navy-900 transition-colors text-sm font-medium">2</a>
+                <a href="404.html" class="w-10 h-10 flex items-center justify-center border border-gray-200 text-gray-700 hover:text-navy-900 hover:border-navy-900 transition-colors text-sm font-medium">3</a>
+                <a href="404.html" class="w-10 h-10 flex items-center justify-center border border-gray-200 text-gray-500 hover:text-navy-900 hover:border-navy-900 transition-colors"><ion-icon name="chevron-forward"></ion-icon></a>
             </nav>
         </div>
   </main>
