--- a/articulo.html
+++ b/articulo.html
@@ -71,14 +71,14 @@
               Institución <ion-icon name="chevron-down-outline" class="text-gold-500"></ion-icon>
             </button>
             <div class="absolute top-full right-0 mt-4 w-48 bg-navy-900 border border-navy-800 shadow-2xl rounded-sm py-2 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all transform origin-top-right">
-              <a href="#" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Historia</a>
-              <a href="#" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Misión & Visión</a>
-              <a href="#" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Directores</a>
+              <a href="404.html" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Historia</a>
+              <a href="404.html" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Misión & Visión</a>
+              <a href="404.html" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Directores</a>
             </div>
           </div>
           <a href="articulos.html" class="text-white text-sm font-medium hover:text-gold-500 transition-colors uppercase tracking-widest">Noticias</a>
           <a href="contacto.html" class="text-white text-sm font-medium hover:text-gold-500 transition-colors uppercase tracking-widest">Contacto</a>
-          <a href="#" class="px-6 py-2 bg-gradient-to-r from-gold-600 to-gold-400 text-navy-950 text-xs font-bold uppercase tracking-wider rounded-sm hover:shadow-[0_0_20px_rgba(212,175,55,0.5)] transition-all transform hover:-translate-y-0.5">
+          <a href="404.html" class="px-6 py-2 bg-gradient-to-r from-gold-600 to-gold-400 text-navy-950 text-xs font-bold uppercase tracking-wider rounded-sm hover:shadow-[0_0_20px_rgba(212,175,55,0.5)] transition-all transform hover:-translate-y-0.5">
             Admisiones
           </a>
         </nav>
@@ -96,7 +96,7 @@
         <ion-icon name="close-outline"></ion-icon>
       </button>
       <a href="index.html" class="text-2xl text-white font-serif hover:text-gold-500">Inicio</a>
-      <a href="#" class="text-2xl text-white font-serif hover:text-gold-500">Institución</a>
+      <a href="404.html" class="text-2xl text-white font-serif hover:text-gold-500">Institución</a>
       <a href="articulos.html" class="text-2xl text-white font-serif hover:text-gold-500">Noticias</a>
       <a href="contacto.html" class="text-2xl text-white font-serif hover:text-gold-500">Contacto</a>
     </div>
@@ -205,15 +205,15 @@
                  <div class="bg-white p-6 rounded-sm shadow-xl border-t-4 border-gold-500 sticky top-24">
                      <h3 class="text-lg font-serif font-bold text-navy-900 mb-6 pb-2 border-b border-gray-100">Más Noticias</h3>
                      <div class="space-y-6">
-                         <a href="#" class="group block">
+                         <a href="404.html" class="group block">
                              <div class="text-[10px] font-bold text-gold-600 uppercase mb-1 tracking-wider">20 Dic, 2024</div>
                              <h4 class="text-sm font-bold text-navy-800 group-hover:text-gold-600 transition-colors leading-snug font-serif">Entrenamiento de Maniobras Conjuntas en el Caribe</h4>
                          </a>
-                         <a href="#" class="group block">
+                         <a href="404.html" class="group block">
                              <div class="text-[10px] font-bold text-gold-600 uppercase mb-1 tracking-wider">15 Dic, 2024</div>
                              <h4 class="text-sm font-bold text-navy-800 group-hover:text-gold-600 transition-colors leading-snug font-serif">Conferencia Internacional sobre Seguridad Marítima</h4>
                          </a>
-                         <a href="#" class="group block">
+                         <a href="404.html" class="group block">
                              <div class="text-[10px] font-bold text-gold-600 uppercase mb-1 tracking-wider">10 Dic, 2024</div>
                              <h4 class="text-sm font-bold text-navy-800 group-hover:text-gold-600 transition-colors leading-snug font-serif">Celebración del Aniversario de la Academia</h4>
                          </a>
