--- a/plantilla.html
+++ b/plantilla.html
@@ -71,14 +71,14 @@
               Institución <ion-icon name="chevron-down-outline" class="text-gold-500"></ion-icon>
             </button>
             <div class="absolute top-full right-0 mt-4 w-48 bg-navy-900 border border-navy-800 shadow-2xl rounded-sm py-2 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all transform origin-top-right">
-              <a href="#" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Historia</a>
-              <a href="#" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Misión & Visión</a>
-              <a href="#" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Directores</a>
+              <a href="404.html" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Historia</a>
+              <a href="404.html" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Misión & Visión</a>
+              <a href="404.html" class="block px-6 py-3 text-gray-300 hover:text-white hover:bg-white/5 text-xs uppercase tracking-wide">Directores</a>
             </div>
           </div>
           <a href="articulos.html" class="text-white text-sm font-medium hover:text-gold-500 transition-colors uppercase tracking-widest">Noticias</a>
           <a href="contacto.html" class="text-white text-sm font-medium hover:text-gold-500 transition-colors uppercase tracking-widest">Contacto</a>
-          <a href="#" class="px-6 py-2 bg-gradient-to-r from-gold-600 to-gold-400 text-navy-950 text-xs font-bold uppercase tracking-wider rounded-sm hover:shadow-[0_0_20px_rgba(212,175,55,0.5)] transition-all transform hover:-translate-y-0.5">
+          <a href="404.html" class="px-6 py-2 bg-gradient-to-r from-gold-600 to-gold-400 text-navy-950 text-xs font-bold uppercase tracking-wider rounded-sm hover:shadow-[0_0_20px_rgba(212,175,55,0.5)] transition-all transform hover:-translate-y-0.5">
             Admisiones
           </a>
         </nav>
@@ -96,7 +96,7 @@
         <ion-icon name="close-outline"></ion-icon>
       </button>
       <a href="index.html" class="text-2xl text-white font-serif hover:text-gold-500">Inicio</a>
-      <a href="#" class="text-2xl text-white font-serif hover:text-gold-500">Institución</a>
+      <a href="404.html" class="text-2xl text-white font-serif hover:text-gold-500">Institución</a>
       <a href="articulos.html" class="text-2xl text-white font-serif hover:text-gold-500">Noticias</a>
       <a href="contacto.html" class="text-2xl text-white font-serif hover:text-gold-500">Contacto</a>
     </div>
@@ -136,15 +136,15 @@
              <div class="md:col-span-2">
                  <h4 class="text-lg font-bold mb-6">Explorar</h4>
                  <ul class="space-y-4 text-sm text-gray-400">
-                     <li><a href="#" class="hover:text-gold-500 transition-colors">Inicio</a></li>
-                     <li><a href="#" class="hover:text-gold-500 transition-colors">Sobre Nosotros</a></li>
+                     <li><a href="404.html" class="hover:text-gold-500 transition-colors">Inicio</a></li>
+                     <li><a href="404.html" class="hover:text-gold-500 transition-colors">Sobre Nosotros</a></li>
                  </ul>
              </div>
              <div class="md:col-span-2">
                  <h4 class="text-lg font-bold mb-6">Recursos</h4>
                  <ul class="space-y-4 text-sm text-gray-400">
-                     <li><a href="#" class="hover:text-gold-500 transition-colors">Aula Virtual</a></li>
-                     <li><a href="#" class="hover:text-gold-500 transition-colors">Portal de Alumnos</a></li>
+                     <li><a href="404.html" class="hover:text-gold-500 transition-colors">Aula Virtual</a></li>
+                     <li><a href="404.html" class="hover:text-gold-500 transition-colors">Portal de Alumnos</a></li>
                  </ul>
              </div>
              <div class="md:col-span-4">
