--- a/index.html
+++ b/index.html
@@ -494,6 +494,75 @@
 <!-- fin seccion de noticias -->
 
 
+
+<!-- seccion de galeria -->
+<section class="py-24 bg-navy-950 relative overflow-hidden">
+    <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 opacity-[0.03] pointer-events-none">
+      <ion-icon name="compass-outline" class="text-[600px] text-white"></ion-icon>
+    </div>
+
+    <div class="container mx-auto px-6 relative z-10">
+      <div class="text-center mb-16">
+        <h2 class="text-white text-4xl md:text-5xl font-serif font-bold mb-4">Muro de Honor</h2>
+        <div class="w-24 h-1 bg-gold-500 mx-auto mb-6"></div>
+        <p class="text-gray-400 max-w-2xl mx-auto uppercase tracking-[0.2em] text-xs font-bold">
+          Registro visual de nuestra disciplina y vida en el mar
+        </p>
+      </div>
+
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-4 h-auto md:h-[700px]">
+        
+        <a href="404.html" class="md:col-span-2 md:row-span-2 group relative overflow-hidden rounded-sm cursor-pointer block">
+          <img src="https://images.unsplash.com/photo-1559136555-9303baea8ebd?q=80&w=2070&auto=format&fit=crop" 
+               class="w-full h-full object-cover transition-transform duration-1000 group-hover:scale-110">
+          <div class="absolute inset-0 bg-navy-900/80 opacity-0 group-hover:opacity-100 transition-all duration-500 flex flex-col justify-center items-center text-center p-8">
+            <h4 class="text-gold-500 font-serif text-2xl mb-2">Entrenamiento en Alta Mar</h4>
+            <p class="text-white text-sm opacity-0 group-hover:opacity-100 transition-opacity delay-200">Prácticas de navegación astronómica y maniobras de cubierta.</p>
+          </div>
+        </a>
+
+        <a href="404.html" class="md:col-span-1 md:row-span-1 group relative overflow-hidden rounded-sm cursor-pointer block">
+          <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=2070&auto=format&fit=crop" 
+               class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+          <div class="absolute inset-0 bg-navy-900/80 opacity-0 group-hover:opacity-100 transition-all duration-500 flex flex-col justify-center items-center text-center p-4">
+            <h4 class="text-gold-500 font-serif text-lg mb-1">Inspecciones</h4>
+            <p class="text-white text-xs opacity-0 group-hover:opacity-100 transition-opacity delay-200">Control de calidad y seguridad</p>
+          </div>
+        </a>
+
+        <a href="404.html" class="md:col-span-1 md:row-span-2 group relative overflow-hidden rounded-sm cursor-pointer block">
+          <img src="https://images.pexels.com/photos/33592359/pexels-photo-33592359.jpeg" 
+               class="w-full h-full object-cover transition-transform duration-1000 group-hover:scale-110">
+          <div class="absolute inset-0 bg-navy-900/80 opacity-0 group-hover:opacity-100 transition-all duration-500 flex flex-col justify-end p-6">
+            <h4 class="text-white font-bold uppercase tracking-widest text-xs mb-2">Ceremonias Oficiales</h4>
+            <p class="text-gold-500 text-xs italic">Tradición y Honor</p>
+          </div>
+        </a>
+
+        <a href="404.html" class="md:col-span-1 md:row-span-1 group relative overflow-hidden rounded-sm cursor-pointer block">
+          <img src="https://images.unsplash.com/photo-1440404653325-ab127d49abc1?q=80&w=2070&auto=format&fit=crop" 
+               class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+          <div class="absolute inset-0 bg-navy-900/80 opacity-0 group-hover:opacity-100 transition-all duration-500 flex flex-col justify-center items-center text-center p-4">
+            <h4 class="text-gold-500 font-serif text-lg mb-1">Vida a Bordo</h4>
+            <p class="text-white text-xs opacity-0 group-hover:opacity-100 transition-opacity delay-200">El mar como aula</p>
+          </div>
+        </a>
+
+      </div>
+
+      <div class="mt-12 text-center">
+        <a href="404.html" class="inline-flex items-center gap-4 text-white hover:text-gold-500 transition-colors group">
+          <span class="font-bold uppercase tracking-[0.3em] text-xs">Explorar Galería Completa</span>
+          <div class="w-12 h-px bg-gold-500 group-hover:w-20 transition-all"></div>
+        </a>
+      </div>
+    </div>
+  </section>
+
+<!-- /fin de la seccion de galerias -->
+
+
+
   <!-- Parallax Values Section -->
   <section class="py-24 relative bg-fixed bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1550949826-5ecc7adaceeb?q=80&w=2070&auto=format&fit=crop');">
       <div class="absolute inset-0 bg-navy-900/80"></div>
